--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,11 @@
 html {
   font-size: 16px;
   font-family: Helvetica, sans-serif;
+  color: #3a3a3a;
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 header {
@@ -8,7 +13,7 @@ header {
   top: 0;
   height: 4rem;
   width: 95%;
-  background-color: white;
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -27,11 +32,11 @@ header .logo h1 {
   margin-left: 0px;
   font-size: 1.25rem;
   font-weight: lighter;
-  color: black;
+  color: #000000;
 }
 
 header .logo h1:last-child {
-  color: gray;
+  color: #c1c1c1;
 }
 
 nav ul li {
@@ -41,7 +46,7 @@ nav ul li {
 }
 
 .banner {
-  background-color: lightgray;
+  background-color: #d1d1d1;
   margin-top: 4rem;
   padding: 2rem 1.5rem;
   display: flex;
@@ -58,9 +63,10 @@ nav ul li {
 
 .banner a {
   display: block;
-  background-color: darkgray;
-  color: white;
+  background-color: #3a3a3a;
+  color: #ffffff;
   text-align: center;
   text-decoration: none;
   padding: .5rem 0;
+  width: 90%;
 }
