--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,4 @@
+/*UNIVERSAL STYLES*/
 html {
   font-size: 16px;
   font-family: Helvetica, sans-serif;
@@ -8,16 +9,16 @@ h2 {
   font-size: 2rem;
 }
 
+/*HEADER STYLES*/
 header {
-  position: fixed;
-  top: 0;
+  flex-basis: 73.6rem;
   height: 4rem;
-  width: 95%;
   background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 1.5rem;
+  margin: 0;
   z-index: 20;
 }
 
@@ -45,20 +46,20 @@ nav ul li {
   padding-left: 16px;
 }
 
+/*BANNER SECTION STYLES*/
 .banner {
   background-color: #d1d1d1;
-  margin-top: 4rem;
-  padding: 2rem 1.5rem;
   display: flex;
   align-items: center;
 }
 
 .banner img {
   width: 60%;
+  margin: 2rem 1.5rem;
 }
 
 .banner-caption {
-  margin-left: 2.5rem;
+  margin-left: 1rem;
 }
 
 .banner a {
@@ -69,4 +70,78 @@ nav ul li {
   text-decoration: none;
   padding: .5rem 0;
   width: 90%;
+}
+
+/*INFORMATION SECTION STYLES*/
+.information {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid #d1d1d1;
+}
+
+.info-left {
+  width: 60%;
+  margin: 2rem 1.5rem;
+  display: inline-block;
+}
+
+.info-left img {
+  width: 100%;
+}
+
+.quoted {
+  font-size: .75rem;
+}
+
+.info-right {
+  width: 35%;
+  display: inline-block;
+  flex-direction: column;
+  border: 1px solid #d1d1d1;
+}
+
+.detail {
+  min-width: 100%;
+  display: flex;
+  align-items: center;
+  border: 1px solid #d1d1d1;
+}
+
+.detail img {
+  width: 35%;
+  margin: 1rem;
+}
+
+.detail h3 {
+  font-size: 1rem;
+  display: block;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+}
+
+.info h3 {
+  margin-bottom: .25rem;
+}
+
+.info p {
+  font-size: .75rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.info a {
+  font-size: .75rem;
+  color: #34a7f9;
+  text-decoration: none;
+}
+
+.info-right div:nth-child(3n + 0) {
+  background-color: #d1d1d1;
+}
+
+.info-right div:nth-child(3n + 0) p {
+  margin: .5rem 0;
 }
