--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,9 +9,27 @@ h2 {
   font-size: 2rem;
 }
 
+h3 {
+  font-size: 1rem;
+  display: block;
+}
+
+h4 {
+  font-size: .75rem;
+  font-weight: normal;
+  text-transform: uppercase;
+  margin: .5rem 0;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
 /*HEADER STYLES*/
 header {
-  flex-basis: 73.6rem;
+  position: fixed;
+  width: 95%;
+  top: 0;
   height: 4rem;
   background-color: #ffffff;
   display: flex;
@@ -48,6 +66,7 @@ nav ul li {
 
 /*BANNER SECTION STYLES*/
 .banner {
+  margin-top: 4rem;
   background-color: #d1d1d1;
   display: flex;
   align-items: center;
@@ -72,28 +91,24 @@ nav ul li {
   width: 90%;
 }
 
-/*INFORMATION SECTION STYLES*/
-.information {
+/*INFORMATION AND THESIS SECTION STYLES*/
+.container-columns {
   display: flex;
   justify-content: space-between;
   border: 1px solid #d1d1d1;
 }
 
-.info-left {
+.column-left {
   width: 60%;
   margin: 2rem 1.5rem;
   display: inline-block;
 }
 
-.info-left img {
+.column-left img, .column-left video {
   width: 100%;
 }
 
-.quoted {
-  font-size: .75rem;
-}
-
-.info-right {
+.column-right {
   width: 35%;
   display: inline-block;
   flex-direction: column;
@@ -110,11 +125,6 @@ nav ul li {
 .detail img {
   width: 35%;
   margin: 1rem;
-}
-
-.detail h3 {
-  font-size: 1rem;
-  display: block;
 }
 
 .info {
@@ -138,10 +148,101 @@ nav ul li {
   text-decoration: none;
 }
 
-.info-right div:nth-child(3n + 0) {
+/*INFORMATION SECTION STYLES*/
+.quoted {
+  font-size: .75rem;
+}
+
+.column-right div:nth-child(3n + 0) {
   background-color: #d1d1d1;
 }
 
-.info-right div:nth-child(3n + 0) p {
+.column-right div:nth-child(3n + 0) p {
   margin: .5rem 0;
+}
+
+/*THESIS SECTION STYLES*/
+.thesis {
+  border-left: 1px solid #d1d1d1;
+  border-right: 1px solid #d1d1d1;
+  padding-top: 2rem;
+}
+
+.thesis h2 {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
+.thesis .container-columns {
+  border: none;
+}
+
+.thesis .column-left {
+  margin-right: 1rem;
+}
+
+.thesis .column-right {
+  border: none;
+}
+
+.thesis .detail {
+
+  border: none;
+}
+
+#fisma {
+  background-color: #d1d1d1;
+}
+
+
+/*COURSES SECTION STYLES*/
+.subjects {
+  background-color: #d1d1d1;
+  padding: 2rem;
+}
+
+.subjects h2 {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.course {
+  width: 35%;
+  margin: 0 1rem;
+  padding-bottom: 1.5rem;
+  background-color: #ffffff;
+}
+
+.bottom {
+  margin-top: 2rem;;
+}
+
+.title img {
+  width: 100%;
+}
+
+.listing p {
+  margin: 0;
+}
+
+.title h3, .title h4, .listing p {
+  margin-left: 1rem;
+}
+
+/*FOOTER STYLES*/
+footer {
+  height: 5rem;
+  border: 1px solid #d1d1d1;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+  margin: 0;
 }
