--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,6 +25,18 @@ h5 {
   font-size: 1.5rem;
 }
 
+@media only screen and (max-width: 40rem) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 30rem) {
+  html {
+    font-size: 18px;
+  }
+}
+
 /*HEADER STYLES*/
 header {
   position: fixed;
@@ -61,7 +73,57 @@ header .logo h1:last-child {
 nav ul li {
   display: inline-block;
   list-style: none;
-  padding-left: 16px;
+  padding-left: 1rem;
+}
+
+nav.desktop ul li {
+  display: inline-block;
+}
+
+nav.mobile ul li {
+  display: none;
+}
+
+@media only screen and (max-width: 45rem) {
+  nav.desktop {
+    display: none;
+    position: fixed;
+  }
+
+  nav.mobile ul li {
+    display: inline-block;
+    margin-right: 1rem;
+  }
+}
+
+@media only screen and (max-width: 35rem) {
+  header .logo h1 {
+    display: none;
+    position: fixed;
+  }
+
+  header {
+    justify-content: center;
+  }
+
+  nav.mobile ul li {
+    margin-right: 4rem;
+    padding-left: 0;
+  }
+
+  nav.mobile ul {
+    padding-left: 4rem;
+  }
+}
+
+@media only screen and (max-width: 30rem) {
+  nav.mobile ul li {
+    margin-right: 2rem;
+  }
+
+  nav.mobile ul {
+    padding-left: 2rem;
+  }
 }
 
 /*BANNER SECTION STYLES*/
@@ -70,6 +132,10 @@ nav ul li {
   background-color: #d1d1d1;
   display: flex;
   align-items: center;
+}
+
+.mobile-img {
+  display: none;
 }
 
 .banner img {
@@ -91,6 +157,25 @@ nav ul li {
   width: 90%;
 }
 
+@media only screen and (max-width: 30rem) {
+  .banner img {
+    display: none;
+  }
+
+  .mobile-img {
+    display: block;
+    height: 12rem;
+    width: 100%;
+    margin-top: 4rem;
+    background-color: #3a3a3a;
+  }
+
+  .banner {
+    margin-top: 0;
+    padding-bottom: 1rem;
+  }
+}
+
 /*INFORMATION AND THESIS SECTION STYLES*/
 .container-columns {
   display: flex;
@@ -110,8 +195,9 @@ nav ul li {
 
 .column-right {
   width: 35%;
-  display: inline-block;
+  display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   border: 1px solid #d1d1d1;
 }
 
@@ -161,6 +247,20 @@ nav ul li {
   margin: .5rem 0;
 }
 
+@media only screen and (max-width: 30rem) {
+  #information .column-left {
+    display: none;
+  }
+
+  #information .column-right {
+    width: 100%;
+  }
+
+  #information .column-right div:nth-child(3n + 0) {
+    background-color: #ffffff;
+  }
+}
+
 /*THESIS SECTION STYLES*/
 .thesis {
   border-left: 1px solid #d1d1d1;
@@ -195,6 +295,29 @@ nav ul li {
   background-color: #d1d1d1;
 }
 
+@media only screen and (max-width: 45rem) {
+  .thesis .column-right {
+    justify-content: space-around;
+  }
+}
+
+@media only screen and (max-width: 30rem) {
+  .thesis .column-right {
+    display: none;
+  }
+
+  .thesis .column-left {
+    width: 100%;
+  }
+
+  .thesis .column-left h5, .thesis .column-left p {
+    display: none;
+  }
+
+  .thesis h2 {
+    margin-bottom: 0;
+  }
+}
 
 /*COURSES SECTION STYLES*/
 .subjects {
@@ -236,6 +359,42 @@ nav ul li {
   margin-left: 1rem;
 }
 
+@media only screen and (max-width: 45rem) {
+  .course {
+    margin: 0 .25rem;
+    margin-bottom: .5rem;
+  }
+}
+
+@media only screen and (max-width: 30rem) {
+  .title img, .title h4, .listing {
+    display: none;
+  }
+
+  .subjects {
+    background-color: #ffffff;
+  }
+
+  .title {
+    background-color: #d1d1d1;
+    width: 100%;
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  .course {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+
+  .course h3 {
+    padding: 1rem;
+  }
+}
+
 /*FOOTER STYLES*/
 footer {
   height: 5rem;
@@ -245,4 +404,34 @@ footer {
   justify-content: space-between;
   padding: 0 1.5rem;
   margin: 0;
+}
+
+@media only screen and (max-width: 40rem) {
+  footer {
+    display: block;
+    text-align: center;
+    padding: 0;
+    height: auto;
+  }
+
+  footer nav ul li {
+    padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 30rem) {
+  footer nav {
+    display: none;
+  }
+
+  footer p {
+    margin: 1rem 0;
+    font-size: 1rem;
+    text-align: left;
+    padding-left: .5rem;
+  }
+
+  footer {
+    padding-top: 1.5rem;
+  }
 }
